--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^1.1.6
+
+dev_dependencies:
+  build_runner:
+  flutter_gen_runner:
+
+
+flutter_gen:
+  integrations:
+    flutter_svg: true
+
+flutter:
+  # The following line ensures that the Material Icons font is
+  # included with your application, so that you can use the icons in
+  # the material Icons class.
+  uses-material-design: true
+
+  assets:
+    - assets/drawables/
+    - assets/icons/
+    
 
 library:
   name: lib/awesome_input.dart
